# FoamUtils

./: .gitignore  CHANGELOG.md  README.md  __init__.py  parameters  pyproject.toml  requirements.txt  setup.py
FoamUtils/: ThermophysicalProperties.py  __init__.py  file_utils.py  plot_residuals.py  wall_profiles.py
_attic/: ThermophysicalProperties.py
constant/: physicalProperties  thermophysicalProperties
tests/: test_file_utils.py  test_thermophysical.py  test_thermophysical_integration.py
