[build-system]
requires = ["setuptools>=61", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "foamutils"
version = "0.6"
description = "Utility functions for OpenFOAM"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Johan R. Espelund", email = "johan.espelund@sintef.no" },
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "matplotlib>=3.5",
    "numpy>=1.22",
    "pandas>=1.4",
    "PyFoam>=2023.0",
    "scienceplots>=2.0",
]

[project.urls]
Homepage = "https://github.com/johanespelund/FoamUtils"

[project.scripts]
plot_res = "FoamUtils.plot_residuals:main"
plot_thermo = "FoamUtils.ThermophysicalProperties:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["FoamUtils*"]
